--- a/form.html
+++ b/form.html
@@ -38,6 +38,9 @@
                 <option value="10B">Class 10B</option>
             </select>
 
+            <label for="date">Date of Issue</label>
+            <input type="date" id="date" required>
+
             <label for="issue">Describe the issue</label>
             <textarea id="issue" required></textarea>
 
