--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Technical Issue System</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <label for="userId">User ID</label>
-            <input type="text" id="userId" required>
+  <div class="container">
+    <h2>Login</h2>
+    <form id="loginForm">
+      <label for="userId">User ID</label>
+      <input type="text" id="userId" required>
 
-            <label for="userPass">Password</label>
-            <input type="password" id="userPass" required>
+      <label for="userPass">Password</label>
+      <input type="password" id="userPass" required>
 
-            <button type="submit">Login</button>
-        </form>
-        <p id="errorMsg" class="error"></p>
-    </div>
-    <script src="script.js"></script>
+      <button type="submit">Login</button>
+    </form>
+    <p id="errorMsg" style="color: red;"></p>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
